adding link to github

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <h1>World clock</h1>
     <footer>
       Coded by Katarzyna Kreja and hosted on
-      <a href="http://" target="_blank" rel=""></a> GitHub
+      <a
+        href="https://github.com/KatarzynaKreja/world-clocks"
+        target="_blank"
+        rel=""
+      ></a>
+      GitHub
     </footer>
   </body>
   <script rel="stylesheet" src="js/index.js"></script>
