--- a/index.html
+++ b/index.html
@@ -8,15 +8,34 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>World clock</h1>
+    <div class="container">
+      <h1>World clock</h1>
+      <select name="" id="">
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+      </select>
+    </div>
+    <div class="city">
+      <h3>Warsaw</h3>
+      <div class="date">August 15th 2022</div>
+      <div class="time">13:48:15</div>
+    </div>
+    <div class="city">
+      <h3>Rome</h3>
+      <div class="date">August 15th 2022</div>
+      <div class="time">13:48:15</div>
+    </div>
     <footer>
-      Coded by Katarzyna Kreja and hosted on
+      Coded by Katarzyna Kreja and is open sourced on
       <a
         href="https://github.com/KatarzynaKreja/world-clocks"
         target="_blank"
         rel=""
-      ></a>
-      GitHub
+      >
+        GitHub</a
+      >
     </footer>
   </body>
   <script rel="stylesheet" src="js/index.js"></script>
