--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
         <option value="">New York</option>
         <option value="">Auckland</option>
       </select>
-    </div>
-    <div class="city">
-      <h3>Warsaw</h3>
-      <div class="date">August 15th 2022</div>
-      <div class="time">13:48:15</div>
-    </div>
-    <div class="city">
-      <h3>Rome</h3>
-      <div class="date">August 15th 2022</div>
-      <div class="time">13:48:15</div>
+      <div class="city">
+        <div>
+          <h3>Warsaw</h3>
+          <div class="date">August 15th 2022</div>
+        </div>
+
+        <div class="time">13:48:15</div>
+      </div>
+      <div class="city">
+        <div>
+          <h3>Rome</h3>
+          <div class="date">August 15th 2022</div>
+        </div>
+
+        <div class="time">13:48:15</div>
+      </div>
     </div>
     <footer>
-      Coded by Katarzyna Kreja and is open sourced on
+      Coded by <strong>Katarzyna Kreja</strong> and is open sourced on
       <a
         href="https://github.com/KatarzynaKreja/world-clocks"
         target="_blank"
