--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
         <option value="">New York</option>
         <option value="">Auckland</option>
       </select>
-      <div class="city" id="warsaw">
+      <div class="city" id="catania">
         <div>
-          <h3>Warsaw</h3>
-          <div class="date"></div>
-        </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="rome">
-        <div>
-          <h3>Rome</h3>
+          <h3>Catania 🐘</h3>
           <div class="date"></div>
         </div>
 
         <div class="time"></div>
       </div>
+      <div class="city" id="cracow">
+        <div>
+          <h3>Cracow 🐲</h3>
+          <div class="date"></div>
+        </div>
+
+        <div class="time"></div>
+      </div>
+
       <div class="city" id="hongkong">
         <div>
           <h3>Hongkong</h3>
