adding function for drop down list

--- a/index.html
+++ b/index.html
@@ -12,36 +12,38 @@
   <body>
     <div class="container">
       <h1>World clock</h1>
-      <select name="" id="">
+      <select name="cities" id="city">
         <option value="">Select a city</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific/Auckland">Auckland</option>
       </select>
-      <div class="city" id="catania">
-        <div>
-          <h3>Catania 🐘</h3>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="catania">
+          <div>
+            <h3>Catania 🐘</h3>
+            <div class="date"></div>
+          </div>
+
+          <div class="time"></div>
+        </div>
+        <div class="city" id="cracow">
+          <div>
+            <h3>Cracow 🐲</h3>
+            <div class="date"></div>
+          </div>
+
+          <div class="time"></div>
         </div>
 
-        <div class="time"></div>
-      </div>
-      <div class="city" id="cracow">
-        <div>
-          <h3>Cracow 🐲</h3>
-          <div class="date"></div>
+        <div class="city" id="hongkong">
+          <div>
+            <h3>Hongkong 🥟</h3>
+            <div class="date"></div>
+          </div>
+
+          <div class="time"></div>
         </div>
-
-        <div class="time"></div>
-      </div>
-
-      <div class="city" id="hongkong">
-        <div>
-          <h3>Hongkong</h3>
-          <div class="date"></div>
-        </div>
-
-        <div class="time"></div>
       </div>
     </div>
     <footer>
