changing one of the location

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <div class="container">
       <h1>World clock</h1>
+
       <select name="cities" id="city">
         <option value="">Select a city</option>
         <option value="current">My current location</option>
@@ -28,9 +29,9 @@
 
           <div class="time"></div>
         </div>
-        <div class="city" id="cracow">
+        <div class="city" id="reykjavik">
           <div>
-            <h3>Cracow 🐲</h3>
+            <h3>Reykjavik 🧊</h3>
             <div class="date"></div>
           </div>
 
